%% Fig 4.5 — ERD (core schema, clustered by sub-domain)
%% Source: author, derived from Liquibase changelog + ARCHITECTURE.md §7
%% Clusters: identity&access · academic structure · assessment records · analytics layer · audit
erDiagram
    users ||--o| students : "is-a"
    users ||--o| teachers : "is-a"
    courses ||--o{ groups : "offered-as"
    groups ||--o{ students : "enrols"
    groups ||--o{ lessons : "schedules"
    courses ||--o{ lessons : "covers"
    teachers ||--o{ lessons : "teaches"
    lessons ||--o{ attendance : "has"
    students ||--o{ attendance : "marked-in"
    courses ||--o{ assignments : "defines"
    assignments ||--o{ grades : "graded-as"
    students ||--o{ grades : "earns"
    students ||--o{ behavior_records : "observed-in"
    students ||--o{ activity_records : "logged-in"
    students ||--|| student_metrics : "cached-as"
    students ||--o{ metric_snapshots : "history-of"
    formula_config ||--o{ student_metrics : "weights"
    students ||--o{ notifications : "alerted-by"
    users ||--o{ audit_log : "acts-in"

    users {
        bigint id PK
        string email UK
        string password_hash
        string role "CHECK ADMIN|TEACHER|STUDENT"
        timestamp deleted_at "soft delete"
    }
    attendance {
        bigint id PK
        bigint student_id FK
        bigint lesson_id FK
        string status "PRESENT|ABSENT|LATE"
        bigint marked_by_user_id FK
        timestamp marked_at
    }
    grades {
        bigint id PK
        bigint student_id FK
        bigint assignment_id FK
        numeric value "CHECK >= 0"
        bigint graded_by_user_id FK
    }
    formula_config {
        bigint id PK
        int version UK
        numeric weight_grades
        numeric weight_attendance
        numeric weight_practical
        numeric weight_behavior
        numeric weight_activity
        numeric weight_growth
        numeric weight_consistency
        boolean is_active
    }
    student_metrics {
        bigint id PK
        bigint student_id FK "UNIQUE"
        numeric composite_score
        numeric grades_norm
        numeric attendance_norm
        numeric practical_norm
        numeric behavior_norm
        numeric activity_norm
        numeric growth_bonus
        numeric consistency_bonus
        int formula_version
        timestamp computed_at
    }
    metric_snapshots {
        bigint id PK
        bigint student_id FK
        date snapshot_date
        numeric composite_score
    }
    audit_log {
        bigint id PK
        string entity_type
        bigint entity_id
        string action
        bigint actor_user_id FK
        json payload
        timestamp created_at
    }
